--- a/index.html
+++ b/index.html
@@ -2687,7 +2687,7 @@
                                         <div id="content_239f40ead" class="column-content" data-module="button">
                                             <div class="ce-button" data-align="center">
                                                 <div class="is-content" data-width="auto"> <a data-font="font_0zz6x0tj0"
-                                                        href="https://www.linkedin.com/in/Nikhar Jain/"
+                                                        href="https://www.linkedin.com/in/nikhar444/"
                                                         target="_blank">LinkedIn</a></div>
                                             </div>
                                         </div>
@@ -2699,7 +2699,7 @@
                                         <div id="content_ec0afe27a" class="column-content" data-module="button">
                                             <div class="ce-button" data-align="center">
                                                 <div class="is-content" data-width="auto"> <a data-font="font_0zz6x0tj0"
-                                                        href="mailto:Nikhar@nikharjain.design" target="_blank">Email
+                                                        href="mailto:nj222@cornell.edu" target="_blank">Email
                                                         Me</a></div>
                                             </div>
                                         </div>
